techchallange3/kubernetes/traefik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: main-router
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: PathPrefix(`/auth`)
      kind: Rule
      services:
        - name: auth-service
          namespace: auth-service
          port: 80
      middlewares:
        - name: strip-auth-prefix
          namespace: auth-service

    - match: PathPrefix(`/flags`)
      kind: Rule
      services:
       - name: flag-service
         namespace: flag-service
         port: 80
      middlewares:
       - name: strip-flags-prefix
         namespace: flag-service

    - match: PathPrefix(`/analytics`)
      kind: Rule
      services:
       - name: analytics-service
         namespace: analytics-service
         port: 80
      middlewares:
       - name: strip-analytics-prefix
         namespace: analytics-service

    - match: PathPrefix(`/evaluation`)
      kind: Rule
      services:
       - name: evaluation-service
         namespace: evaluation-service
         port: 80
      middlewares:
       - name: strip-evaluation-prefix
         namespace: evaluation-service

    - match: PathPrefix(`/target`)
      kind: Rule
      services:
       - name: targeting-service
         namespace: targeting-service
         port: 80
      middlewares:
      - name: strip-target-prefix
        namespace: targeting-service
